--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <input type="submit" class="btn btn-uke" id="btn-uke" value="Siste uken" />
             <input type="submit" class="btn btn-mnd" id="btn-mnd" value="Siste måneden" />
             <input type="submit" class="btn btn-6mnd" id="btn-6mnd" value="Siste halvåret" />
+            <input type="date" class="date-1" id="date-1" max="">
             <div class="bord">
               <canvas id="myChart" width="500" height="200"></canvas>
               <script src="js/radbird.js"></script>           <!--Grafen er her-->
@@ -96,7 +97,7 @@
       </div>
     </section>
     
-    <section id="kart" class="tm-section-pad-top"> <!--Her skal kartet implenteres-->
+    <section id="kart" class="tm-section-pad-top">  
       <div class="container">
         <div class="col-lg-12 col-xl-12">
           <div class="text-center col-12">
