--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
             <input type="submit" class="btn btn-uke" id="btn-uke" value="Siste uken" />
             <input type="submit" class="btn btn-mnd" id="btn-mnd" value="Siste måneden" />
             <input type="submit" class="btn btn-6mnd" id="btn-6mnd" value="Siste halvåret" />
-            <input type="date" class="date-1" id="date-1" max="">
+            <input type="submit" class="btn btn-aar" id="btn-aar" value="Siste året" />
+            <br><br>
+            <input type="date" class="date" id="date-1">
+            <input type="date" class="date" id="date-2">
             <div class="bord">
               <canvas id="myChart" width="500" height="200"></canvas>
               <script src="js/radbird.js"></script>           <!--Grafen er her-->
