Fjernet litt kommentarer

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <input type="submit" class="btn btn-6mnd" id="btn-6mnd" value="Siste halvåret" />
             <input type="submit" class="btn btn-aar" id="btn-aar" value="Siste året" />
             <br><br>
-            <input type="date" class="date" id="date-1">
-            <input type="date" class="date" id="date-2">
+            Fra: <input type="date" class="date" id="date-1">
+            Til: <input type="date" class="date" id="date-2">
             <div class="bord">
               <canvas id="myChart" width="500" height="200"></canvas>
               <script src="js/radbird.js"></script>           <!--Grafen er her-->
