--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <div class="remove-node bord">
                   <h3 class="remove-node-header">Fjern / nullstill node:</h3>
                   Nodenummer: <input type="number" name="nodeNr" id="nodeNr"><br>
-                  Passord: <input type="password" name="notPassword" id="notPassword"><br>
+                  Passord: <input type="password" name="notPassword" id="notPassword"><br><br>
                   <button class="btn" onclick="removeNode(document.getElementById('nodeNr').value, document.getElementById('notPassword').value)">Fjern / nullstill</button>
                 </div>
               </section>
