Litt småfiks på skjemaet for fjerning.

--- a/index.html
+++ b/index.html
@@ -136,9 +136,15 @@
                 </section>
               <div class="remove-node bord">
                   <h3 class="remove-node-header">Fjern / nullstill node:</h3>
-                  Nodenummer: <input type="number" name="nodeNr" id="nodeNr"><br>
-                  Passord: <input type="password" name="notPassword" id="notPassword"><br><br>
-                  <button class="btn" onclick="removeNode(document.getElementById('nodeNr').value, document.getElementById('notPassword').value)">Fjern / nullstill</button>
+                  <form action="" class="remove-form">
+                    <label for="nodeNr">
+                      Nodenummer: <input type="number" name="nodeNr" id="nodeNr"><br>
+                    </label>
+                    <label for="notPassword">
+                      Passord: <input type="password" name="notPassword" id="notPassword"><br><br>
+                    </label>
+                    <submit class="btn" onclick="removeNode(document.getElementById('nodeNr').value, document.getElementById('notPassword').value)">Fjern / nullstill</submit>
+                  </form>
                 </div>
               </section>
             </div>
